Replace tuy_banner and update services Replaced tuy_banner photo with classroom candid photo. Updated Our Services to open until 6:30pm.

--- a/css/tuy_global.css
+++ b/css/tuy_global.css
@@ -40,7 +40,7 @@ body {
 .top_banner {
     height: 300px;
     width: 100%;
-    background-image: url("../media/images/tuy_banner.jpg");
+    background-image: url("../img/tuy-classtime-candid.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
