--- a/css/tuy_afterschool.css
+++ b/css/tuy_afterschool.css
@@ -1,19 +1,20 @@
-.three_columns {
-    display: flex;
-    justify-content: center;
+* {
+    /*border: solid red 2px;*/
+    padding: 0;
+    margin: 0;
+    justify-content: left;
     flex-wrap: nowrap;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.h2_twocolumns {
-    display: flex;
-    flex-direction: column;
-}
-
-.two_columns {
-    display: flex;
-}
 
 ul {
+    font-size: 22px;
+    text-align-last: left;
     list-style-type: none;
-    font-size: 20px;
+    line-height: 30px;
+}
+
+.schedule-title {
+    padding: 15px 100px
 }
