--- a/css/tuy_global.css
+++ b/css/tuy_global.css
@@ -1,51 +1,41 @@
-body {
-    width: 80%;
-    margin: auto;
-    padding-top: 30px;
-    min-width: 1000px;
-    max-width: 1000px;
+.topnav {
+    background-color: white;
+    overflow: hidden;
 }
 
-.global_header {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 20px;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+body {
+    background: rgb(255, 245, 221);
+}
+
+li {
+    float: left;
+    list-style-type: none;
+}
+
+.topnav a {
+    display: block;
+    padding: 34px;
+    text-decoration: none;
+    color:rgb(4, 53, 53);
+    font-weight: bold;
+    text-align: center;
+    font-size: 28px;
+}
+
+.topnav a:hover {
+    background-color: rgb(4, 53, 53);
+    color: rgb(255, 245, 221);
 }
 
 .logo {
-    height: 100px;
+    width: 100px;
+    height: auto;
+    float: left;
 }
 
-.topnav {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.topnav_item {
-    padding-left: 20px;
-    font-size: 22px;
-    align-self: center;
-}
-
-.header_links {
-    text-decoration: none;
-    color: black;
-    transition-duration: 0.2s;
-}
-
-.header_links:hover {
-    color: #8c8c8c;
-}
-
-.top_banner {
-    height: 500px;
-    width: 100%;
-    background-image: url("../img/tuy-classtime-candid-4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-h1 {
-    text-align: center;
-    font-size: 3em;
-}
