--- a/css/tuy_homepage.css
+++ b/css/tuy_homepage.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 
 .container{
@@ -18,5 +19,28 @@
 
 .title {
     font-size: 48px;
+    color: rgb(4, 53, 53);
+    max-width: 1000px;
+    margin: 10px auto;
+}
+
+.summary.container {
+    margin: 0 auto;
+    max-width: 1000px;
+
+}
+.summary.paragraph {
+    text-align: left;
+    font-size: 24px;
+}
+
+.services.container {
+    text-align: left;
+    max-width: 1000px;
+    margin: 15px auto;
+    font-size: 20px;
+}
+#service-header {
+    font-size: 30px;
     color: rgb(4, 53, 53);
 }
