--- a/css/tuy_about-us.css
+++ b/css/tuy_about-us.css
@@ -1,5 +1,5 @@
-.banner.image {
-    width: clamp(200px, 50%, 800px);
+.banner {
+    width: clamp(200px, 75%, 800px);
     height: auto;
     margin-top: 25px;
 }
