--- a/css/tuy_homepage.css
+++ b/css/tuy_homepage.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+    border: 1px solid gray;
 }
 
 .container{
@@ -52,3 +52,11 @@ ul.service-list {
 }
 
 /* Social media tags and logos */
+.social-media-logo {
+    max-width: 50px;
+}
+
+#social-media-links {
+    display: flex;
+    justify-content: space-around;
+}
