--- a/css/tuy_homepage.css
+++ b/css/tuy_homepage.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    border: 1px solid gray;
+    /*border: 1px solid gray; */
 }
 
 .container{
@@ -11,10 +11,14 @@
     text-align: center;
 }
 
-.banner {
-    width: clamp(200px, 75%, 800px);
+.banner.container {
+    background: rgba(95, 6, 6, 0.801);
+}
+
+.banner-image {
+    width: clamp(150px, 75%, 600px);
     height: auto;
-    margin-top: 25px;
+    margin: 15px 0;
 }
 
 .title {
@@ -56,7 +60,33 @@ ul.service-list {
     max-width: 50px;
 }
 
+#social-media-links a {
+    text-decoration: none;
+    color:rgb(4, 53, 53);
+    font-size: 18px;
+}
+
+.social-media-container {
+    display: flex;
+    margin-top: 25px;
+    background-color: rgb(255, 255, 178);
+    align-self: flex-end;
+    justify-content: center;
+}
+
+.social-media.title {
+    font-size: 25px;
+    text-align: center;
+    margin: 10px 25px;
+}
+
 #social-media-links {
     display: flex;
     justify-content: space-around;
+}
+
+#facebook, #instagram {
+    display: flex;
+    align-items: center;
+    margin: 0 10px;
 }
