Add summer school section to about-us

--- a/css/tuy_about-us.css
+++ b/css/tuy_about-us.css
@@ -1,4 +1,4 @@
-.banner img {
+img {
     width: 500px;
     height: auto;
     border-radius: 8px;
@@ -13,13 +13,14 @@
     display: flex;
     justify-content: space-evenly;
     background-color: rgba(0, 119, 255, 0.382);
+    padding: 30px 0;
 }
 
 .services {
     align-self: center;
 }
 
-.services .list-title {
+.list-title {
     font-size: 36px;
     color: rgb(4, 26, 53);
 }
@@ -27,4 +28,11 @@
 .services .list {
     font-size: 18px;
     color: rgb(4, 26, 53);
+}
+
+.summer-container {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: rgba(103, 9, 9, 0.382);
+    padding: 30px 0;
 }
