--- a/css/tuy_schedule.css
+++ b/css/tuy_schedule.css
@@ -5,36 +5,30 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-#after-school-container {
-    flex: auto;
-    margin-left: 10%;
-}
-
 #summer-school-container {
-    flex: auto;
-    margin-right: 5%;
-    margin-left: 25%;
-}
-
-.schedule-container {
     display: flex;
-    justify-content: center;
-    margin-top: 15px;
+    justify-content: space-evenly;
+    padding: 30px 0;
+    background-color: rgba(165, 42, 42, 0.276);
 }
 
-.banner.image {
-    width: clamp(200px, 50%, 800px);
+#after-school-container {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 30px 0;
+    background-color: rgba(42, 69, 165, 0.367);
+}
+
+img {
+    width: 450px;
     height: auto;
-    margin-top: 25px;
 }
 
-ul.schedule {
-    font-size: 1.5em;
-    text-align-last: left;
-    list-style-type: none;
-    line-height: 30px;
+.schedule ul {
+    font-size: 24px;
+    margin-left: 30px;
 }
 
-.schedule-title {
-    padding: 15px 100px
+.container-title {
+    align-self: center;
 }
