--- a/css/tuy_global.css
+++ b/css/tuy_global.css
@@ -3,6 +3,8 @@
     padding: 12px;
     border-bottom: 1px dotted rgb(223, 223, 223);
     background-color: white;
+    display: flex;
+    justify-content: space-between;
 }
 
 .topnav ul {
@@ -12,7 +14,6 @@
     align-items: center;
     padding: 0px;
     margin: 0;
-    margin-right: 400px;
 }
 
 * {
@@ -31,7 +32,8 @@ body {
     text-decoration: none;
     color:rgb(4, 53, 53);
     font-weight: bold;
-    font-size: 1.1em;
+    font-size: min(2.5vw, 24px);
+    
     margin: 0;
     padding: 5px;
     flex-wrap: nowrap;
