--- a/css/tuy_global.css
+++ b/css/tuy_global.css
@@ -1,4 +1,6 @@
 /* CSS page with horizontal navigation bar code */
+
+/*
 .topnav {
     padding: 12px;
     border-bottom: 1px dotted rgb(223, 223, 223);
@@ -6,7 +8,32 @@
     display: flex;
     justify-content: space-between;
 }
+*/
 
+* {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 0px;
+    margin: 0;
+}
+
+.navbar {
+    background-color: rgb(221, 255, 254);
+    color:rgb(4, 53, 53);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.nav-list, .nav-list a {
+    list-style-type: none;
+    text-decoration: none;
+}
+
+.nav-list {
+    display: flex;
+}
+
+/*
 .topnav ul {
     display: flex;
     gap: 30px;
@@ -15,6 +42,7 @@
     padding: 0px;
     margin: 0;
 }
+
 
 * {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -50,4 +78,5 @@ li.logo {
     max-height: 75px;
 }
 
+/*
 
