--- a/css/tuy_homepage.css
+++ b/css/tuy_homepage.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    border: 1px solid gray;
+    /*border: 1px solid gray;*/
 }
 
 .container {
@@ -135,6 +135,13 @@ ul.service-list {
     height: 100px;
     align-items: center;
     border-radius: 10px;
+}
+
+@media all and (max-width: 315px) {
+    .footer-container {
+        display: block;
+    }
+    
 }
 
 #phone-container h3 {
