Finishing touches on logos and images

--- a/css/tuy_global.css
+++ b/css/tuy_global.css
@@ -46,7 +46,12 @@
 }
 
 .navbar-logo {
-    height: 5vw;
+    height: 3vw;
+}
+@media all and (max-width: 1500px) {
+    .navbar-logo {
+        height: 5vw;
+    }
 }
 
 @media all and (max-width: 250px) {
