--- a/css/tuy_about-us.css
+++ b/css/tuy_about-us.css
@@ -1,9 +1,12 @@
+
+/*
 img {
     width: 500px;
     height: auto;
     border-radius: 8px;
     align-self: center;
 }
+*/
 
 .header-container {
     display: flex;
