--- a/css/tuy_about-us.css
+++ b/css/tuy_about-us.css
@@ -1,12 +1,6 @@
-
-/*
-img {
-    width: 500px;
-    height: auto;
-    border-radius: 8px;
-    align-self: center;
+.banner-image {
+    height: 15vw;
 }
-*/
 
 .header-container {
     display: flex;
@@ -20,18 +14,18 @@ img {
 }
 
 .list-title {
-    font-size: 36px;
+    font-size: 4vw;
     color: rgb(103, 9, 9);
 }
 
 .services .list {
-    font-size: 18px;
+    font-size: 2vw;
     color: rgb(13, 16, 20);
     margin-left: 30px;
 }
 
 .services .list-subtitle {
-    font-size: 24px;
+    font-size: 3vw;
 }
 
 .summer-container {
@@ -45,8 +39,4 @@ img {
     display: flex;
     justify-content: space-evenly;
     padding: 30px 0;
-}
-
-#owner-image {
-    width: 200px;
 }
