Update about us and home page

--- a/css/tuy_homepage.css
+++ b/css/tuy_homepage.css
@@ -86,6 +86,13 @@ ul.service-list {
     justify-content: center;
 }
 
+@media all and (max-width: 425px) {
+    .social-media-section {
+        height: 100px;
+    }
+
+}
+
 .social-media-logo {
     max-width: 3.0vw;
     margin-right: 4px;
@@ -93,8 +100,9 @@ ul.service-list {
 
 #social-media-links a {
     text-decoration: none;
+    font-weight: bold;
     color: rgb(4, 0, 255);
-    font-size: 1.2vw;
+    font-size: 2vw;
 }
 
 
@@ -126,6 +134,11 @@ ul.service-list {
     justify-content: center;
     padding: 100px;
 }
+@media all and (max-width: 425px) {
+    .footer {
+        padding: 0px;
+    }
+}
 
 .footer-container {
     display: flex;
@@ -137,13 +150,6 @@ ul.service-list {
     border-radius: 10px;
 }
 
-@media all and (max-width: 315px) {
-    .footer-container {
-        display: block;
-    }
-    
-}
-
 #phone-container h3 {
     color: rgb(255, 255, 178);
     font-size: min(1.5vw, 20px);
@@ -153,4 +159,13 @@ ul.service-list {
     color: rgb(255, 255, 178);
     font-size: min(1.5vw, 20px);
     padding: 2px 0;
+}
+
+.phone-number#phone-label, .email-address#email-label {
+    font-size: calc(16px + 1vw);
+}
+
+.email-address#email-label a{
+    text-decoration: underline;
+    color: rgb(255, 255, 178);
 }
