Revamp navigation bar

--- a/css/tuy_global.css
+++ b/css/tuy_global.css
@@ -1,121 +1,10 @@
-/* CSS page with horizontal navigation bar code */
-
-/*
-.topnav {
-    padding: 12px;
-    border-bottom: 1px dotted rgb(223, 223, 223);
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-}
-*/
-
-* {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding: 0px;
-    margin: 0;
+.navbar-nav .nav-link:hover {
+  background-color: #f4a261;
+  color: #7b3000;
+  border-radius: 5px;
+  transition: background-color 0.2s, color 0.2s;
 }
 
-.navbar {
-    background-color: rgb(244, 246, 208);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 1vw;
+.navbar .navbar-expand-lg .navbar-dark {
+    background-color: #005f73;
 }
-
-.navbar a {
-    text-decoration: none;
-    color:rgb(4, 53, 53);
-}
-
-.nav-list, .nav-list a {
-    list-style-type: none;
-    text-decoration: none;
-}
-
-.nav-list .list-item{
-    display: inline-block;
-    padding: 20px;
-}
-
-@media all and (max-width: 300px) {
-    .nav-list .list-item{
-        padding: 5px;
-    }
-}
-
-.navbar-logo {
-    height: 3vw;
-}
-@media all and (max-width: 100px) {
-    .navbar-logo {
-        height: 5vw;
-    }
-}
-
-@media all and (max-width: 250px) {
-    .navbar-logo {
-        display: none;
-    }
-}
-
-@media all and (max-width: 915px) {
-
-    .navbar {
-        background-color: rgb(244, 246, 208);
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        font-size: 2vw;
-    }
-
-}
-
-/*
-.topnav ul {
-    display: flex;
-    gap: 30px;
-    list-style-type: none;
-    align-items: center;
-    padding: 0px;
-    margin: 0;
-}
-
-
-* {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding: 0px;
-    margin: 0;
-}
-
-body {
-    background: rgb(255, 245, 221);
-
-}
-
-.topnav a {
-    flex: 0 0 auto;
-    text-decoration: none;
-    color:rgb(4, 53, 53);
-    font-weight: bold;
-    font-size: min(2.5vw, 24px);
-    
-    margin: 0;
-    padding: 5px;
-    flex-wrap: nowrap;
-    width: 120px;
-    height: 24px;
-}
-
-li.logo {
-    margin-right: auto;
-    margin-left: 400px;
-}
-.image {
-    max-width: 75px;
-    max-height: 75px;
-}
-
-/*
-
