--- a/css/tuy_global.css
+++ b/css/tuy_global.css
@@ -1,6 +1,6 @@
 .navbar-nav .nav-link:hover {
-  background-color: #f4a261;
-  color: #7b3000;
+  background-color: #ffd7b6;
+  color: #5e2121;
   border-radius: 5px;
   transition: background-color 0.2s, color 0.2s;
 }
